tests/tests/neg/error_messages/extern_specs/extern_spec_for_local_def.rs
use flux_rs::*;

fn test01() {}

#[extern_spec]
fn test01(); //~ERROR cannot add extern specs to local definition
